improve styles SEO and performance

--- a/docs.html
+++ b/docs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Docs | CloudBranch</title>
+    <meta name="description" content="CloudBranch Hosting Documentation - Your Comprehensive Resource for Successful Deployment. Get started with installation, configuration, domain management, and scaling strategies. Elevate your hosting journey with our detailed guides.">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -12,8 +13,8 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#000000">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="css/utilities.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="main.css"></noscript>    <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -55,13 +56,13 @@
     <div class="container grid">
       <div class="py-2">
         <nav>
-          <h4 class="my-2">Essentials</h4>
+          <h3 class="my-2">Essentials</h3>
           <ul>
             <li><a href="#introduction">Introduction</a></li>
             <li><a href="#about">About CloudBranch</a></li>
             <li><a href="#installation">Installation</a></li>
           </ul>
-          <h4 class="my-2">Deployment</h4>
+          <h3 class="my-2">Deployment</h3>
           <ul>
             <li><a href="#getting-started">Getting Started</a></li>
             <li><a href="#configuring-settings">Configuring Settings</a></li>
@@ -71,20 +72,20 @@
         </nav>
       </div>
       <div class="card flex-column">
-        <h2 class="md">Essentials</h2>
+        <h2>Essentials</h2>
         <section id="introduction">
           <h3>Introduction</h3>
           <p>Welcome to the CloudBranch hosting documentation. This guide provides a comprehensive resource for deploying and managing your web applications with ease. Explore our platform's powerful features and get started on your journey to successful hosting.</p>
+          <div class="alert alert-success my-2">
+            <i class="fas fa-info"></i>
+            <p>CloudBranch is a demo website built by <a href="#" class="text-primary">Evergreen Web Designs</a>. This is not a real cloud hosting platform.</p>
+          </div>
+          <h4>Requirements</h4>
+          <ul>
+            <li>Windows 10, Mac OSX, Linux</li>
+            <li>Node.js v12 or higher</li>
+          </ul>
         </section>
-        <div class="alert alert-success">
-          <i class="fas fa-info"></i>
-          <p>CloudBranch is a demo website built by <a href="#" class="text-primary">Evergreen Web Designs</a>. This is not a real cloud hosting platform.</p>
-        </div>
-        <h3>Requirements</h3>
-        <ul>
-          <li>Windows 10, Mac OSX, Linux</li>
-          <li>Node.js v12 or higher</li>
-        </ul>
         <section id="about">
           <h3>About CloudBranch</h3>
           <p>Discover the story behind CloudBranch hosting. Our commitment to innovation and reliability drives us to provide cutting-edge cloud solutions tailored to your needs. Learn about our mission to bridge technology and user experience, and explore how CloudBranch has evolved into a trusted hosting partner for businesses worldwide.</p>
@@ -92,13 +93,16 @@
         <section id="installation">
           <h3>Installation</h3>
           <p>Dive into the step-by-step installation guide to set up CloudBranch hosting for your projects. Our detailed instructions ensure a seamless setup process, whether you're a developer or a non-technical user. From creating an account to configuring your first instance, this section will help you get your web applications up and running quickly and efficiently.</p>
-          <p>Mac (Homebrew)</p>
-          <pre><code>$ brew install cloudbranch-cli</code></pre>
-          <p>NPM</p>
-          <pre><code>$ npm install cloudbranch-cli</code></pre>
-          <p>Yarn</p>
-          <pre><code>$ yarn install cloudbranch-cli</code></pre>
+          <div class="my-1 well">
+            <p>Mac (Homebrew)</p>
+            <pre><code>$ brew install cloudbranch-cli</code></pre>
+            <p>NPM</p>
+            <pre><code>$ npm install cloudbranch-cli</code></pre>
+            <p>Yarn</p>
+            <pre><code>$ yarn install cloudbranch-cli</code></pre>
+          </div>
         </section>
+        <h2>Deployment</h2>
         <section id="getting-started">
           <h3>Getting Started</h3>
           <p>Welcome to the world of CloudBranch hosting! In this section, we'll guide you through your first deployment. From uploading your application files to accessing your control panel, you'll gain hands-on experience with the platform. Start your journey towards successful hosting and discover how CloudBranch can elevate your online presence.</p>
@@ -140,10 +144,10 @@
       </nav>
       <div class="flex-column">
         <div class="social py-2">
-          <a href="#"><i class="fab fa-github fa-2x"></i></a>
-          <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-          <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
-          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+          <a href="#" title="github"><i class="fab fa-github fa-2x"></i></a>
+          <a href="#" title="facebook"><i class="fab fa-facebook fa-2x"></i></a>
+          <a href="#" title="linkedin"><i class="fab fa-linkedin fa-2x"></i></a>
+          <a href="#" title="instagram"><i class="fab fa-instagram fa-2x"></i></a>
         </div>
         <p>Built by <a href="#" class="text-primary">Evergreen Web Designs</a></p>
       </div>
