--- a/features.html
+++ b/features.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Features | CloudBranch</title>
+    <meta name="description" content="Explore CloudBranch Hosting's Unique Features - Scalable Performance, Robust Security, Global Data Centers, Intuitive Control Panel, Automated Backups, and 24/7 Expert Support. Learn how our features set us apart.">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -12,8 +13,8 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#000000">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="css/utilities.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="main.css"></noscript>    <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -55,7 +56,7 @@
       <div class="container grid">
         <img src="/images/cloud-illustration.svg" alt="">  
         <div>
-          <h1 class="md">The CloudBranch Platform</h1>
+          <h2 class="md">The CloudBranch Platform</h2>
           <p>
             Our platform empowers businesses of all sizes to thrive in the digital landscape. With a focus on performance, security, and simplicity, we offer a comprehensive suite of hosting services designed to elevate your online presence.
           </p>
@@ -69,7 +70,7 @@
           <div class="card flex">
             <i class="fas fa-chart-line fa-3x text-primary"></i>
             <div class="flex">
-              <h4>Scalable Performance</h4>
+              <h3>Scalable Performance</h3>
               <p>
                 Experience unmatched performance with our scalable cloud infrastructure. Whether you're a startup or an enterprise, our hosting adapts to your needs, ensuring optimal speed and responsiveness.              </p>
             </div>
@@ -77,7 +78,7 @@
           <div class="card flex">
             <i class="fas fa-shield-alt fa-3x text-primary"></i>
             <div class="flex">
-              <h4>Robust Security Measures</h4>
+              <h3>Robust Security Measures</h3>
               <p>
                 Your data's safety is our priority. Benefit from top-tier security protocols, including firewalls, regular backups, and intrusion detection, to keep your digital assets secure.              </p>
             </div>   
@@ -85,7 +86,7 @@
           <div class="card flex">
             <i class="fas fa-globe fa-3x text-primary"></i>
             <div class="flex">
-              <h4>Global Data Centers</h4>
+              <h3>Global Data Centers</h3>
               <p>
                 Our network of data centers across different regions guarantees low-latency access and reliable uptime for your website or application
               </p>
@@ -94,7 +95,7 @@
           <div class="card flex">
             <i class="fas fa-laptop-code fa-3x text-primary"></i>
             <div class="flex">
-              <h4>Intuitive Control Panel</h4>
+              <h3>Intuitive Control Panel</h3>
               <p>
                 Take control with ease using our user-friendly control panel. Manage domains, databases, and configurations hassle-free, even if you're new to cloud hosting
               </p>
@@ -103,7 +104,7 @@
           <div class="card flex">
             <i class="fas fa-database fa-3x text-primary"></i>
             <div class="flex">
-              <h4>Automated Backups</h4>
+              <h3>Automated Backups</h3>
               <p>
                 Our automated backup system ensures your valuable information is regularly backed up, giving you peace of mind in case of unexpected events
               </p>
@@ -112,7 +113,7 @@
           <div class="card flex ">
             <i class="fas fa-question-circle fa-3x text-primary"></i>
             <div class="flex">
-              <h4>24/7 Expert Support</h4>
+              <h3>24/7 Expert Support</h3>
               <p>
                 Our dedicated support team is available around the clock to assist you with technical queries, troubleshooting, and guidance on optimizing your hosting setup
               </p>
@@ -142,10 +143,10 @@
       </nav>
       <div class="flex-column">
         <div class="social py-2">
-          <a href="#"><i class="fab fa-github fa-2x"></i></a>
-          <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-          <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
-          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+          <a href="#" title="github"><i class="fab fa-github fa-2x"></i></a>
+          <a href="#" title="facebook"><i class="fab fa-facebook fa-2x"></i></a>
+          <a href="#" title="linkedin"><i class="fab fa-linkedin fa-2x"></i></a>
+          <a href="#" title="instagram"><i class="fab fa-instagram fa-2x"></i></a>
         </div>
         <p>Built by <a href="#" class="text-primary">Evergreen Web Designs</a></p>
       </div>
